jellyfin/Deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: jellyfin
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: jellyfin
    spec:
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl
          valueFrom:
            configMapKeyRef:
              key: JELLYFIN_PublishedServerUrl
              name: jellyfin-config-env
        image: docker.io/jellyfin/jellyfin:10.11.8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            squat.ai/dri: "1"
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /cache
          name: cache
        - mountPath: /media
          name: media
          readOnly: true
      securityContext:
        fsGroup: 1000
        supplementalGroups:
        - 303
        - 26
      volumes:
      - hostPath:
          path: /data/jellyfin/config
        name: config
      - hostPath:
          path: /data/jellyfin/cache
        name: cache
      - hostPath:
          path: /cold-data/media
          type: DirectoryOrCreate
        name: media
