jellyfin/StatefulSet-jellyfin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jellyfin
  template:
    metadata:
      labels:
        name: jellyfin
    spec:
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl
          valueFrom:
            configMapKeyRef:
              key: JELLYFIN_PublishedServerUrl
              name: jellyfin-config-env
        image: docker.io/jellyfin/jellyfin:10.11.6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /cache
          name: cache
        - mountPath: /media
          name: media
          readOnly: true
        - mountPath: /dev/dri/renderD128
          name: dri
          subPath: renderD128
      securityContext:
        fsGroup: 1000
        supplementalGroups:
        - 303
        - 26
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - hostPath:
          path: /cold-data/media
          type: DirectoryOrCreate
        name: media
      - hostPath:
          path: /dev/dri
          type: Directory
        name: dri
  updateStrategy:
    type: RollingUpdate
