jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
    name: jellyfin
  name: jellyfin
  namespace: media
spec:
  ports:
  - name: jellyfin-http
    port: 8096
    targetPort: 8096
  selector:
    name: jellyfin
