jellyfin/IngressRoute-jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: jellyfin
  name: jellyfin-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`media.danielramos.me`)
    middlewares: null
    services:
    - name: jellyfin
      port: 8096
  tls:
    store:
      name: default
